<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View"/>
        <variable
            name="vm"
            type="n71.inc.calculatorimt.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f1f3f4"
        tools:context=".ui.home.HomeFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark"
            android:elevation="5dp"
            app:menu="@menu/menu_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/calculator_bmi"
            app:titleTextColor="@color/white" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/text_baner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/adView"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/weight"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:layout_editor_absoluteX="10dp" />

                        <EditText
                            android:id="@+id/edtWeight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radio_button_not_active"
                            android:hint="76.9"
                            android:text="@={vm.edtWeight}"
                            android:inputType="number"
                            android:maxLength="7"
                            android:padding="10dp"
                            app:layout_constraintTop_toBottomOf="@+id/textView"
                            tools:layout_editor_absoluteX="10dp" />

                        <TextView
                            android:id="@+id/idKg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginTop="14dp"
                            android:layout_marginBottom="44dp"
                            android:text="@{vm.idKg}"
                            app:layout_constraintBottom_toBottomOf="@+id/edtWeight"
                            app:layout_constraintEnd_toEndOf="@+id/edtWeight"
                            app:layout_constraintTop_toTopOf="@+id/edtWeight" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/height"
                            app:layout_constraintTop_toBottomOf="@+id/edtWeight"
                            tools:layout_editor_absoluteX="10dp" />

                        <EditText
                            android:id="@+id/edtHeight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="183"
                            android:text="@={vm.edtHeight}"
                            android:padding="10dp"
                            android:background="@drawable/radio_button_not_active"
                            android:inputType="number"
                            android:maxLength="7"
                            app:layout_constraintTop_toBottomOf="@+id/textView2"
                            tools:layout_editor_absoluteX="10dp" />

                        <TextView
                            android:id="@+id/idSm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginTop="14dp"
                            android:text="@{vm.idSm}"
                            app:layout_constraintBottom_toBottomOf="@+id/edtHeight"
                            app:layout_constraintEnd_toEndOf="@+id/edtHeight"
                            app:layout_constraintTop_toTopOf="@+id/edtHeight" />


                        <RadioGroup
                            android:id="@+id/linearLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal"
                            app:layout_constraintTop_toBottomOf="@+id/edtHeight"
                            tools:layout_editor_absoluteX="10dp">

                            <RadioButton
                                android:id="@+id/btnMale"
                                style="@style/StyleRadioButton"
                                android:layout_weight="1"
                                android:text="@string/male" />

                            <RadioButton
                                android:id="@+id/btnFemale"
                                style="@style/StyleRadioButton"
                                android:layout_weight="1"
                                android:text="@string/female" />
                        </RadioGroup>

                        <Button
                            android:id="@+id/btnDone"
                            android:onClick="@{vm::btnDoneClick}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/calculator_ibm"
                            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/linearResult"
                        android:visibility="@{vm.linearResultVisible ? View.VISIBLE : View.GONE}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/txtResult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@={vm.txtResult}"
                            android:textColor="@{vm.txtResultColor}"
                            android:textSize="29sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/you_ibm"
                            android:textSize="10sp"
                            app:layout_constraintEnd_toEndOf="@+id/txtResult"
                            app:layout_constraintStart_toStartOf="@+id/txtResult"
                            app:layout_constraintTop_toBottomOf="@+id/txtResult" />

                        <TextView
                            android:id="@+id/txtResultLong"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:gravity="center"
                            android:text="@={vm.txtResultLong}"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/txtResult"
                            app:layout_constraintTop_toTopOf="@+id/txtResult" />

                        <View
                            android:id="@+id/view"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="#f1f3f4"
                            app:layout_constraintTop_toBottomOf="@+id/textView4"
                            tools:layout_editor_absoluteX="10dp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:gravity="center"
                            android:text="@string/ideal_weight"
                            app:layout_constraintTop_toBottomOf="@+id/view"
                            tools:layout_editor_absoluteX="10dp" />

                        <View
                            android:id="@+id/view2"
                            android:layout_width="1dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="10dp"
                            android:background="#f1f3f4"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView5" />

                        <TextView
                            android:id="@+id/txtMiniIdel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@={vm.txtMiniIdel}"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/view2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/view2" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/minimum"
                            android:textSize="10sp"
                            app:layout_constraintBottom_toBottomOf="@+id/view2"
                            app:layout_constraintEnd_toStartOf="@+id/view2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtMiniIdel" />


                        <TextView
                            android:id="@+id/txtMaxIdeal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@={vm.txtMaxIdeal}"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/view2"
                            app:layout_constraintTop_toTopOf="@+id/view2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/maximum"
                            android:textSize="10sp"
                            app:layout_constraintBottom_toBottomOf="@+id/view2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/view2"
                            app:layout_constraintTop_toBottomOf="@+id/txtMiniIdel" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>