<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="listener"
            type="n71.inc.calculatorimt.helper.IClickModel" />
        <variable
            name="model"
            type="n71.inc.calculatorimt.model.Model" />
    </data>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_margin="10dp"
        android:elevation="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearResult"
            android:onClick="@{() -> listener.onResultModel(model)}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.imb}"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="29sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_ibm"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/txtResult"
                app:layout_constraintStart_toStartOf="@+id/txtResult"
                app:layout_constraintTop_toBottomOf="@+id/txtResult" />

            <TextView
                android:id="@+id/txtResultLong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@{model.result}"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtResult"
                app:layout_constraintTop_toTopOf="@+id/txtResult" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#f1f3f4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/you_stats"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <View
                android:id="@+id/view2"
                android:layout_width="1dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="#f1f3f4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/txtMiniIdel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.height}"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_small"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtMiniIdel" />


            <TextView
                android:id="@+id/txtMaxIdeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.weight}"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/view2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_small"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/view2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/txtMiniIdel" />

            <TextView
                android:id="@+id/txtDate"
                android:gravity="center"
                android:textSize="10sp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{model.date}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                tools:layout_editor_absoluteX="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>